# src/post/post.controller.ts
@@ -1,14 +1,28 @@
-import { Controller, Get, Post, Body, Patch, Param, Delete, UseGuards, Req, ParseIntPipe } from '@nestjs/common';
+import { Controller, Get, Post, Body, Patch, Param, Delete, UseGuards, Req, ParseIntPipe, Query } from '@nestjs/common';
 import { PostService } from './post.service';
 import { CreatePostDto } from './dto/create-post.dto';
 import { UpdatePostDto } from './dto/update-post.dto';
+import { PaginationDto } from './dto/pagination.dto';
 import { JwtAuthGuard } from 'src/auth/guards/jwt-auth/jwt-auth.guard';
 import { ApiTags, ApiOperation, ApiBearerAuth } from '@nestjs/swagger';
+import { AuthGuard } from '@nestjs/passport';
 
 @ApiTags('게시글 (Post)')
 @Controller('post')
 export class PostController {
   constructor(private readonly postService: PostService) {}
+
+  @UseGuards(AuthGuard('jwt'))
+  @ApiBearerAuth()
+  @Get('me')
+  @ApiOperation({ summary: '유저 게시글 조회' })
+  async getUserPostStats(
+    @Req() req,
+    @Query() query: PaginationDto
+  ) {
+    const userId = req.user.uuid;
+    return this.postService.getUserPostStats(userId, query.page, query.limit);
+  }
 
   @Post()
   @UseGuards(JwtAuthGuard)
@@ -41,7 +55,7 @@ export class PostController {
   @Delete(':id')
   @UseGuards(JwtAuthGuard)
   @ApiBearerAuth()
-  @ApiOperation({ summary: '게시글 삭제'})
+  @ApiOperation({ summary: '게시글 삭제' })
   remove(@Param('id', ParseIntPipe) id: number, @Req() req: any) {
     return this.postService.remove(id, req.user.userId);
   }
